# AIFCOMSSwithCUPredictorTest

./: CMakeLists.txt  README.md  README_CaveatsInstallingOnSELinux.md  README_CaveatsInstallingPHPonMacOSMonterey.md  altitude_ALTAIR.cc  predict.py  predict.py.preNOAAwindfilechanges16jun21  requirements_macos.txt  requirements_python2.7linux.txt  requirements_python2.7macos.txt  requirements_python2.7win.txt  requirements_python3.11.txt  requirements_python3.txt  requirements_python3.txt.preNOAAwindfilechanges16jun21
pred_src/: CMakeCache.txt  CMakeLists.txt  altitude.c  altitude.h  altitude_ALTAIR.cc  altitude_ALTAIR.hh  altitude_StationKeep.cc  altitude_StationKeep.hh  altitude_fastsim.cc  altitude_fastsim.hh  cmake_install.cmake  cmakeclean.script  pred.c  pred_ALTAIR.cc  pred_ALTAIR.hh  pred_StationKeep.cc  pred_StationKeep.hh  pred_fastsim.cc  pred_fastsim.hh  run_model.h  run_model_ALTAIR.cc  run_model_ALTAIR.hh  run_model_StationKeep.cc  run_model_StationKeep.hh  run_model_fastsim.cc  run_model_fastsim.hh
pred_src/CMakeFiles_clean/: CMakeDirectoryInformation.cmake  Makefile.cmake
pred_src/CMakeFiles_clean/pred.dir/: link.txt
pred_src/state/: ALTAIR_state.cc  ALTAIR_state.hh  BalloonAndPfoilState.cc  BalloonAndPfoilState.hh  ExternalEnvironState.cc  ExternalEnvironState.hh  GondolaAndPropState.cc  GondolaAndPropState.hh  OptSourcePayloadState.cc  OptSourcePayloadState.hh
pred_src/util/: AscentAndBurstCalcMethods.cc  AscentAndBurstCalcMethods.hh  BalloonPropertiesCalcMethods.cc  BalloonPropertiesCalcMethods.hh  DragCalcMethods.cc  DragCalcMethods.hh  HeliumLossCalcMethods.cc  HeliumLossCalcMethods.hh  PropulsionUtils.cc  PropulsionUtils.hh  SolarPowerCalcMethods.cc  SolarPowerCalcMethods.hh  StationKeepingAlgorithms.cc  StationKeepingAlgorithms.hh  StationKeepingFigureOfMerit.cc  StationKeepingFigureOfMerit.hh  ThrustCalcMethods.cc  ThrustCalcMethods.hh  TorqueCalcMethods.cc  TorqueCalcMethods.hh  UpdateALTAIRState.cc  UpdateALTAIRState.hh  random.c
pred_src/wind/: fastsim_generate_wind.c  fastsim_generate_wind.h  wind_file.c  wind_file_ALTAIR.c  wind_file_ALTAIR.h  wind_file_cache.c  wind_file_cache_ALTAIR.c  wind_file_cache_ALTAIR.h
predict/: .htaccess  AIFCOMSS.html  AIFCOMSSfastSim.html  AIFpred.php  ALTAIR_entities_cesiumframe.html  ALTAIR_entities_p5frame.html  ALTAIR_entities_p5frame.js  ALTAIR_entities_windytvframe.html  ALTAIR_p5frame_procinputfuns.js  ajax.php  altairdata.txt  altairpos.txt  flight_path.csv  js_variables.cjs  js_variables.js  package-lock.json  package.json  predict.py  py_variables.py  server.cjs  server.js
predict/includes/: config.inc.php  functions.inc.php  php_variables.php
predict/js/pred/: pred-event.js
screenshots/: placeholder.txt
